--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2"
   },
   "lint-staged": {
