--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
     "expo": "~53.0.20",
+    "expo-av": "^15.1.7",
     "expo-location": "^18.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
