--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -16,6 +16,7 @@
     "expo": "~53.0.20",
     "expo-av": "^15.1.7",
     "expo-location": "^18.1.6",
+    "expo-sensors": "^14.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
