--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -23,10 +23,32 @@ DATABASE_PASSWORD=guardian_secure_2025
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRES_IN=24h
 
+# External APIs & Services
+
+# AWS S3 Configuration (for evidence storage)
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=guardianpulse-evidence
+
+# Twilio SMS Configuration (for SMS alerts)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_PHONE_NUMBER=+1234567890
+
+# Email Configuration (for email alerts)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password
+EMAIL_FROM="GuardianPulse Safety <your_email@gmail.com>"
+
+# Application URLs
+DASHBOARD_URL=http://localhost:5173
+
 # External APIs (for future AI integration)
 # OPENAI_API_KEY=your_openai_api_key
-# TWILIO_ACCOUNT_SID=your_twilio_account_sid
-# TWILIO_AUTH_TOKEN=your_twilio_auth_token
 
 # Security
 # CORS_ORIGIN=http://localhost:3000
