--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -13,6 +13,11 @@ DATABASE_NAME=guardianpulse_db
 DATABASE_USER=guardianpulse
 DATABASE_PASSWORD=guardian_secure_2025
 
+# Stripe Payment Integration
+STRIPE_SECRET_KEY=sk_test_... # Your Stripe secret key from dashboard
+STRIPE_WEBHOOK_SECRET=whsec_... # Webhook endpoint secret from Stripe dashboard
+STRIPE_PREMIUM_PRICE_ID=price_... # Monthly premium subscription price ID
+
 # Redis Configuration (for future use)
 # REDIS_URL=redis://localhost:6379
 # REDIS_HOST=localhost
