--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,7 +13,11 @@
     "format:check": "prettier --check src/**/*.ts",
     "typecheck": "tsc --noEmit",
     "code-quality": "pnpm run typecheck && pnpm run lint && pnpm run format:check",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --testPathPattern=unit",
+    "test:integration": "jest --testPathPattern=integration",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
@@ -34,18 +38,23 @@
     "@eslint/js": "^9.31.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/express-rate-limit": "^6.0.2",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.15",
     "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.2",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "jest": "^30.0.5",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
@@ -55,6 +64,7 @@
     "@prisma/client": "^6.12.0",
     "@types/express": "^5.0.3",
     "@types/redis": "^4.0.11",
+    "@types/stripe": "^8.0.417",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/twilio": "^3.19.3",
@@ -68,6 +78,7 @@
     "nodemailer": "^7.0.5",
     "redis": "^5.6.0",
     "socket.io": "^4.8.1",
+    "stripe": "^18.3.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.7.3",
