for manual testing

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -1,69 +1,155 @@
 # GuardianPulse API Environment Variables
 # Copy this file to .env and update the values as needed
 
-# Server Configuration
+# ========================================
+# 🚀 SERVER CONFIGURATION
+# ========================================
+# Server port - API will run on this port
 PORT=8080
+
+# Environment mode - affects logging, error handling, and security
 NODE_ENV=development
 
-# Database Configuration
+# Logging level - debug, info, warn, error, silent
+LOG_LEVEL=info
+
+# ========================================
+# 🗄️ DATABASE CONFIGURATION
+# ========================================
+# PostgreSQL connection string - primary database
 DATABASE_URL=postgresql://guardianpulse:guardian_secure_2025@localhost:5432/guardianpulse_db
+
+# Individual database connection components (for reference/future use)
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_NAME=guardianpulse_db
 DATABASE_USER=guardianpulse
 DATABASE_PASSWORD=guardian_secure_2025
 
-# Stripe Payment Integration
-STRIPE_SECRET_KEY=sk_test_... # Your Stripe secret key from dashboard
-STRIPE_WEBHOOK_SECRET=whsec_... # Webhook endpoint secret from Stripe dashboard
-STRIPE_PREMIUM_PRICE_ID=price_... # Monthly premium subscription price ID
+# ========================================
+# 🔐 AUTHENTICATION & SECURITY
+# ========================================
+# JWT secret key for signing tokens - CHANGE THIS IN PRODUCTION!
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 
-# Redis Configuration (for future use)
+# JWT token expiration time (examples: 24h, 7d, 30m)
+JWT_EXPIRES_IN=24h
+
+# ========================================
+# 💳 STRIPE PAYMENT INTEGRATION
+# ========================================
+# Stripe secret key from your Stripe dashboard
+STRIPE_SECRET_KEY=sk_test_...
+
+# Webhook endpoint secret for verifying Stripe webhook signatures
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Price ID for premium subscription (get from Stripe dashboard)
+STRIPE_PREMIUM_PRICE_ID=price_...
+
+# ========================================
+# ☁️ AWS S3 CONFIGURATION (Evidence Storage)
+# ========================================
+# AWS credentials for S3 evidence storage
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+
+# AWS region where your S3 bucket is located
+AWS_REGION=us-east-1
+
+# S3 bucket name for storing evidence files
+S3_BUCKET_NAME=guardianpulse-evidence
+
+# ========================================
+# 📨 TWILIO SMS CONFIGURATION (Alerts)
+# ========================================
+# Twilio credentials for sending SMS alerts
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+
+# Twilio phone number for sending SMS from
+TWILIO_PHONE_NUMBER=+1234567890
+
+# ========================================
+# 📧 EMAIL CONFIGURATION (Notifications)
+# ========================================
+# SMTP server configuration for sending emails
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+
+# Email credentials
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password
+
+# From address for outgoing emails
+EMAIL_FROM="GuardianPulse Safety <your_email@gmail.com>"
+
+# ========================================
+# 🌐 APPLICATION URLs
+# ========================================
+# Frontend application URL (for CORS and links)
+FRONTEND_URL=http://localhost:3000
+
+# Web dashboard URL (for email links and redirects)
+DASHBOARD_URL=http://localhost:5173
+
+# Web app URL (for alert dashboard links)
+WEB_APP_URL=http://localhost:3000
+
+# ========================================
+# 🔧 OPTIONAL: REDIS CONFIGURATION
+# ========================================
+# Redis connection for caching and sessions (optional)
 # REDIS_URL=redis://localhost:6379
 # REDIS_HOST=localhost
 # REDIS_PORT=6379
 # REDIS_PASSWORD=
 
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
-JWT_EXPIRES_IN=24h
+# ========================================
+# 🔧 OPTIONAL: SERVER SCALING
+# ========================================
+# Server instance ID for load balancing (optional)
+# SERVER_ID=main
 
-# External APIs & Services
-
-# AWS S3 Configuration (for evidence storage)
-AWS_ACCESS_KEY_ID=your_aws_access_key_id
-AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
-AWS_REGION=us-east-1
-S3_BUCKET_NAME=guardianpulse-evidence
-
-# Twilio SMS Configuration (for SMS alerts)
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_PHONE_NUMBER=+1234567890
-
-# Email Configuration (for email alerts)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_SECURE=false
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_app_password
-EMAIL_FROM="GuardianPulse Safety <your_email@gmail.com>"
-
-# Application URLs
-DASHBOARD_URL=http://localhost:5173
-
-# External APIs (for future AI integration)
+# ========================================
+# 🔧 OPTIONAL: EXTERNAL APIs
+# ========================================
+# OpenAI API key for future AI integration
 # OPENAI_API_KEY=your_openai_api_key
 
-# Security
+# ========================================
+# 🔧 OPTIONAL: SECURITY & RATE LIMITING
+# ========================================
+# CORS origin for additional security
 # CORS_ORIGIN=http://localhost:3000
+
+# Rate limiting configuration
 # RATE_LIMIT_WINDOW_MS=900000
 # RATE_LIMIT_MAX_REQUESTS=100
 
-# Logging
-# LOG_LEVEL=info
+# ========================================
+# 🔧 OPTIONAL: MONITORING & HEALTH CHECKS
+# ========================================
+# Health check timeout in milliseconds
+# HEALTH_CHECK_TIMEOUT=5000
+
+# Enable metrics collection
+# METRICS_ENABLED=true
+
+# Log file path for persistent logging
 # LOG_FILE=logs/app.log
 
-# Monitoring (for future use)
-# HEALTH_CHECK_TIMEOUT=5000
-# METRICS_ENABLED=true
+# ========================================
+# 📝 USAGE NOTES
+# ========================================
+# 1. Copy this file to .env in the same directory
+# 2. Update all placeholder values with your actual credentials
+# 3. Never commit your .env file to version control
+# 4. Required variables (must be set for app to start):
+#    - PORT, DATABASE_URL, JWT_SECRET
+#    - AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION, S3_BUCKET_NAME
+# 5. Optional variables will use defaults if not provided
+# 6. In production, use strong random values for JWT_SECRET
+# 7. Ensure your S3 bucket exists and has proper permissions
+# 8. Configure Stripe webhook endpoint in your Stripe dashboard
