--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -69,6 +69,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/twilio": "^3.19.3",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
