local-dev-version

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -36,29 +36,36 @@ JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRES_IN=24h
 
 # ========================================
-# 💳 STRIPE PAYMENT INTEGRATION
+# 💳 RAZORPAY PAYMENT INTEGRATION (Indian Payment Gateway)
 # ========================================
-# Stripe secret key from your Stripe dashboard
-STRIPE_SECRET_KEY=sk_test_...
+# Razorpay credentials from your Razorpay dashboard
+RAZORPAY_KEY_ID=rzp_test_...
+RAZORPAY_KEY_SECRET=your_razorpay_secret
 
-# Webhook endpoint secret for verifying Stripe webhook signatures
-STRIPE_WEBHOOK_SECRET=whsec_...
+# Webhook secret for verifying Razorpay webhook signatures
+RAZORPAY_WEBHOOK_SECRET=your_webhook_secret
 
-# Price ID for premium subscription (get from Stripe dashboard)
-STRIPE_PREMIUM_PRICE_ID=price_...
+# Plan ID for premium subscription (create in Razorpay dashboard)
+RAZORPAY_PREMIUM_PLAN_ID=plan_...
 
 # ========================================
-# ☁️ AWS S3 CONFIGURATION (Evidence Storage)
+# ☁️ DIGITALOCEAN SPACES CONFIGURATION (Evidence Storage)
 # ========================================
-# AWS credentials for S3 evidence storage
-AWS_ACCESS_KEY_ID=your_aws_access_key_id
-AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+# DigitalOcean Spaces credentials (S3-compatible, GitHub Student Pack $200 credit)
+DO_SPACES_ACCESS_KEY=your_do_spaces_access_key
+DO_SPACES_SECRET_KEY=your_do_spaces_secret_key
 
-# AWS region where your S3 bucket is located
-AWS_REGION=us-east-1
+# DigitalOcean region where your Space is located
+DO_SPACES_REGION=nyc3
 
-# S3 bucket name for storing evidence files
-S3_BUCKET_NAME=guardianpulse-evidence
+# Space name for storing evidence files
+DO_SPACES_BUCKET=guardianpulse-evidence
+
+# Space endpoint URL
+DO_SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
+
+# CDN endpoint (optional, for faster delivery)
+DO_SPACES_CDN_ENDPOINT=https://your-space-name.nyc3.cdn.digitaloceanspaces.com
 
 # ========================================
 # 📨 TWILIO SMS CONFIGURATION (Alerts)
@@ -148,8 +155,27 @@ WEB_APP_URL=http://localhost:3000
 # 3. Never commit your .env file to version control
 # 4. Required variables (must be set for app to start):
 #    - PORT, DATABASE_URL, JWT_SECRET
-#    - AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION, S3_BUCKET_NAME
+#    - DO_SPACES_ACCESS_KEY, DO_SPACES_SECRET_KEY, DO_SPACES_REGION, DO_SPACES_BUCKET
 # 5. Optional variables will use defaults if not provided
 # 6. In production, use strong random values for JWT_SECRET
-# 7. Ensure your S3 bucket exists and has proper permissions
-# 8. Configure Stripe webhook endpoint in your Stripe dashboard
+# 7. Ensure your DigitalOcean Space exists and has proper permissions
+
+# ========================================
+# 🎓 GITHUB STUDENT DEVELOPER PACK BENEFITS
+# ========================================
+# Available free credits and services:
+# • DigitalOcean: $200 credit (12 months) - for Spaces storage
+# • Microsoft Azure: $100 credit - alternative cloud storage
+# • Google Cloud: $300 credit - alternative cloud storage
+# • Heroku: Free dyno hours - for deployment
+# • MongoDB Atlas: Free cluster - alternative database
+# • JetBrains: Free IDE licenses
+# • GitHub: Private repositories, Copilot, Advanced Security
+# • Domain.com: Free domain for 1 year
+# 
+# Razorpay Benefits for Indian Students:
+# • Lower transaction fees (2% vs 2.9%)
+# • INR currency support
+# • UPI, NetBanking, Wallet integration
+# • Easier KYC process for students
+# • Better Indian payment methods support
