feat: implement modern cyberpunk UI and fix CORS configuration
- LoginPage: Replace shield icon with lightning bolt emoji, fix zoom scaling
- Implement modern cyberpunk styling with neon colors and animations
- Add comprehensive Tailwind config with custom color palette
- Fix CORS configuration for frontend-backend communication
- Add explicit CORS middleware to Express app
- Update frontend URL configuration for Vite dev server (port 5173)
- Enhanced error handling with detailed network error messages
- Add debugging console logs for API connection troubleshooting
- Create responsive design with proper scaling for all elements
- Implement glass-morphism effects and gradient backgrounds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
     container_name: guardian-pulse-api
     ports:
       - "8080:8080"
+    env_file:
+      - ./packages/api/.env
     environment:
       - NODE_ENV=production
       - DATABASE_URL=postgresql://guardianpulse:guardian_secure_2025@postgres:5432/guardianpulse_db
