--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,11 +2,11 @@
   "name": "@guardian-pulse/api",
   "version": "1.0.0",
   "description": "GuardianPulse API Backend Service",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "pnpm prisma:generate && tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
